Updated delete order functionality.